--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "contactbook-backend",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js"
@@ -13,5 +12,15 @@
     "express": "^4.18.1",
     "mongodb": "^4.10.0",
     "nodemon": "^2.0.20"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/longb1906708/Cai-dat-du-an.git"
+  },
+  "bugs": {
+    "url": "https://github.com/longb1906708/Cai-dat-du-an/issues"
+  },
+  "homepage": "https://github.com/longb1906708/Cai-dat-du-an#readme",
+  "description": ""
 }
